--- a/src/FileSling.Web/FileSling.Web.csproj
+++ b/src/FileSling.Web/FileSling.Web.csproj
@@ -15,7 +15,7 @@
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.9.3">
 	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	    <IncludeAssets>runtime; native; contentfiles; analyzers</IncludeAssets>
 	  </PackageReference>
 	</ItemGroup>
 
