--- a/src/FileSling.Web/tsconfig.json
+++ b/src/FileSling.Web/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compileOnSave": true,
+  "include": [
+    "typescript/*"
+  ],
   "compilerOptions": {
     "strict": true,
     "alwaysStrict": true,
@@ -7,7 +11,6 @@
     "lib": [
       "ES2024"
     ],
-    "outDir": "../js-client"
-  },
-  
+    "outDir": "wwwroot/js-client"
+  }
 }
