--- a/src/FileSling/FileSling.csproj
+++ b/src/FileSling/FileSling.csproj
@@ -4,6 +4,8 @@
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+
+	  <RootNamespace>Th11s.FileSling</RootNamespace>
   </PropertyGroup>
 
 </Project>
