--- a/src/FileSling.Web/tsconfig.json
+++ b/src/FileSling.Web/tsconfig.json
@@ -4,13 +4,17 @@
     "typescript/*"
   ],
   "compilerOptions": {
+    "target": "ES2020",
+    "module": "ESNext",
     "strict": true,
-    "alwaysStrict": true,
-    "target": "es2024",
-    "module": "es2022",
-    "lib": [
-      "ES2024"
-    ],
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "moduleResolution": "Node",
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "sourceMap": true,
+    "jsx": "preserve",
+
     "outDir": "wwwroot/js-client"
   }
 }
