--- a/src/FileSling/FileSling.csproj
+++ b/src/FileSling/FileSling.csproj
@@ -8,4 +8,7 @@
 	  <RootNamespace>Th11s.FileSling</RootNamespace>
   </PropertyGroup>
 
+	<ItemGroup>
+	    <PackageReference Include="Microsoft.Extensions.Options" Version="10.0.0" />
+	</ItemGroup>
 </Project>
