--- a/src/FileSling.Web/FileSling.Web.csproj
+++ b/src/FileSling.Web/FileSling.Web.csproj
@@ -9,10 +9,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="Microsoft.TypeScript.MSBuild" Version="5.9.3">
-	    <PrivateAssets>all</PrivateAssets>
-	    <IncludeAssets>runtime; native; contentfiles; analyzers</IncludeAssets>
-	  </PackageReference>
+		<PackageReference Include="Vite.AspNetCore" Version="2.4.1" />
 	</ItemGroup>
 
 	<ItemGroup>
