--- a/src/FileSling.Web/tsconfig.json
+++ b/src/FileSling.Web/tsconfig.json
@@ -2,7 +2,7 @@
   "compileOnSave": false,
   "include": [
     "typescript/*"
-  ],
+, "typescript/Components/WebComponents.ts"  ],
   "compilerOptions": {
     "target": "ES2020",
     "module": "ESNext",
