--- a/src/FileSling.Web/package.json
+++ b/src/FileSling.Web/package.json
@@ -5,12 +5,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.7",
     "@types/react-dom": "^19.2.3",
+    "typescript": "^5.9.3",
     "vite": "^7.3.0"
   },
   "scripts": {
     "dev": "vite",
+    "ts-check": "tsc --noEmit",
     "build": "vite build"
   },
   "dependencies": {
